# picopad-playground

./: .gitignore  .gitmodules  README.md
_make/: Makefile
picopad-arduino/: build.sh
picopad-arduino/demos/: build.sh  update_libs.sh
picopad-arduino/demos/adafruit-gfx-demo/: build.sh  platformio.ini
picopad-arduino/demos/ne3-scope/: platformio.ini  update_libs.sh
picopad-arduino/demos/pwm-audio/: platformio.ini
picopad-arduino/games/: build.sh
picopad-arduino/games/invaders/: platformio.ini
picopad-arduino/games/pacman/: platformio.ini
picopad-arduino/games/spacegame/: platformio.ini  upload.sh
picopad-arduino/games/t-rex-game/: platformio.ini
picopad-arduino/sensors/: build.sh
picopad-arduino/sensors/bmx280/: README.md  platformio.ini
picopad-arduino/sensors/ds18b20/: platformio.ini
picopad-arduino/sensors/ds3231/: platformio.ini
picopad-arduino/sensors/gl5516/: platformio.ini
picopad-arduino/sensors/hc-sr04/: platformio.ini
picopad-arduino/sensors/scd41/: platformio.ini
picopad-bootloader/: README.md  platformio.ini
picopad-bootloader/assets/: picopad.cfg
picopad-bootloader/src/: main.cpp  main.h  sdk_flash.h
picopad-bootloader/src/img/: battery.cpp  splash.afphoto
picopad-bootloader/tools/: copy_build.py
picopad-gb/: .gitignore  build.sh  platformio.ini
picopad-gb/src/: main.cpp  rom.c
picopad-loader/: README.md  platformio.ini
picopad-loader/patches/: memmap_default.ld  memmap_default.ld.patch  memmap_default_bootloader.ld
picopad-loader/src/: binary_upload.cpp  binary_upload.h  file_manager.cpp  file_manager.h  include.h  main.cpp  messages.cpp  messages.h  sdk_flash.c  sdk_flash.h  sound.cpp  sound.h  system_info.cpp  system_info.h
picopad-loader/src/img/: battery.cpp  battery.h  icons.h  splash.h
picopad-loader/src/snd/: battery.h  click.h
picopad-loader/tools/: copy_loader_build.py  patch_memmap.py
picopad-sdk/: README.md
picopad-sdk/applications/: build.sh
picopad-sdk/applications/am312/: CMakeLists.txt
picopad-sdk/applications/ds18b20/: CMakeLists.txt
picopad-sdk/applications/ds3231/: CMakeLists.txt
picopad-sdk/applications/gl5516/: CMakeLists.txt
picopad-sdk/applications/gl5516_orig/: CMakeLists.txt  memmap_default_noboot.ld
picopad-sdk/games/: build.sh
picopad-sdk/games/maze/: CMakeLists.txt
picopad-sdk/games/maze/img/: tiles.h
picopad-sdk/games/maze/src/: main.cpp  main.h
picopad-sdk/picopad-base/: CMakeLists.txt  post_init.cmake
picopad-sdk/picopad-base/src/: CMakeLists.txt
picopad-sdk/picopad-base/src/common/: CMakeLists.txt
picopad-sdk/picopad-base/src/common/bme280/: CMakeLists.txt  bme280.cpp
picopad-sdk/picopad-base/src/common/bme280/include/: bme280.h
picopad-sdk/picopad-base/src/common/fonts/: CMakeLists.txt
picopad-sdk/picopad-base/src/common/fonts/include/: picopad_fonts.h
picopad-sdk/picopad-base/src/common/hcsr04/: CMakeLists.txt  README.md
picopad-sdk/picopad-base/src/common/hcsr04/include/: hcsr04.h
picopad-sdk/picopad-base/src/common/libs/: CMakeLists.txt  lib_calendar.c  lib_color.c  lib_crc.c  lib_decnum.c  lib_drawtft.c  lib_fat.c  lib_list.c  lib_mat2d.c  lib_mem.c  lib_print.c  lib_pwmsnd.c  lib_rand.c  lib_sd.c  lib_stream.c  lib_text.c  lib_textnum.c
picopad-sdk/picopad-base/src/common/libs/include/: lib_calendar.h  lib_color.h  lib_crc.h  lib_decnum.h  lib_drawtft.h  lib_fat.h  lib_list.h  lib_mat2d.h  lib_mem.h  lib_print.h  lib_pwmsnd.h  lib_rand.h  lib_sd.h  lib_stream.h  lib_text.h
picopad-sdk/picopad-base/src/common/machine/: CMakeLists.txt  picopad_bat.c  picopad_flash.c  picopad_init.c  picopad_key.c  picopad_led.c  picopad_pico_info.c
picopad-sdk/picopad-base/src/common/machine/include/: picopad_bat.h  picopad_flash.h  picopad_init.h  picopad_key.h  picopad_led.h  picopad_pico_info.h
picopad-sdk/picopad-base/src/common/picopad/: CMakeLists.txt
picopad-sdk/picopad-base/src/common/picopad/include/: config_def.h  picopad.h
picopad-sdk/picopad-base/src/common/scd4x/: CMakeLists.txt  scd4x.cpp
picopad-sdk/picopad-base/src/common/sdk/: CMakeLists.txt  sdk_adc.c  sdk_config.c  sdk_cpu.c  sdk_flash.c  sdk_watchdog.c
picopad-sdk/picopad-base/src/common/sdk/include/: sdk_adc.h  sdk_bootrom.h  sdk_clocks.h  sdk_config.h  sdk_cpu.h  sdk_flash.h  sdk_watchdog.h
picopad-sdk/picopad-base/src/common/sht4x/: CMakeLists.txt  sht4x.cpp
picopad-sdk/picopad-base/src/common/sht4x/include/: SensirionI2CCommunication.h  SensirionShdlcCommunication.h  sht4x.h
picopad-sdk/picopad-base/src/common/st7789/: CMakeLists.txt  st7789.c
picopad-sdk/picopad-base/src/common/st7789/include/: st7789.h
picopad-sdk/picopad-bootloader/: CMakeLists.txt
picopad-sdk/picopad-bootloader/file-manager/src/: file_manager.cpp  file_manager.h
picopad-sdk/picopad-bootloader/img/: icons.h  splash.h
picopad-sdk/picopad-bootloader/ld/: bootloader.ld
picopad-sdk/picopad-bootloader/snd/: click.h
picopad-sdk/picopad-bootloader/src/: main.cpp  main.h  system_info.cpp  system_info.h
picopad-sdk/picopad-gb/: CMakeLists.txt  README.md
picopad-sdk/sdcard/: CHESS.PP2  EGGS.PP2  LIFE.PP2  MAZE.PP2  PACMAN.PP2  SNAKE.PP2  SNAKE.TXT  TETRIS.PP2  WEATHER.PP2  picopad.cfg
sdcard/: CUSTOMFW.UF2  picopad.cfg
sdcard/ARDUINO/: GFXDEMO.PP2  INVADERS.PP2  PACMAN.PP2  PWMAUDIO.PP2  SPACE.PP2  TREX.PP2
sdcard/GAMES/: ANTS.PP2  EGGS.PP2  GHOSTRAC.TXT  LIFE.PP2  MAZE.PP2  PACMAN.PP2  TETRIS.PP2
sdcard/Original Games/: ANTS.TXT  FIFTEEN.PP2  FLAPPY.PP2  GHOSTRAC.PP2  SOKOBAN.PP2  TRAIN.PP2  VEGASLOT.PP2
sdcard/Sensors/: CLOCK.PP2  CO2.PP2  DISTANCE.PP2  LIGHT.PP2  TEMP.PP2  WEATHER.PP2
tft-emulator/: CMakeLists.txt  README.md  main.cpp  picopad.h  scd4x.cpp
tools/PyPicoPadImg/: snake.h
tools/PySerialUpload/: README.md
tools/tft-emulator/: CMakeLists.txt  README.md  main.cpp  weather-images.h
tools/tft-emulator/emulator/_font/: font_boldB_8x14.h  font_boldB_8x16.h  font_bold_8x8.h  font_game_8x8.h  font_ibm_8x14.h  font_ibm_8x16.h  font_ibm_8x8.h  font_ibmtiny_8x8.h
tools/tft-emulator/emulator/src/: global.h  lib_drawtft.cpp  lib_drawtft.h
(+381 files in other folders)
